tests/e2e/service_error_intent.error
Error: syntax error in story at line 1, column 17

1|    a = http server as t
                      ^

E0152: `as` can not be used in assignments.
